Заменена gson-lib на Jackson. Добавлена возможность работы с несколькими профилями одновременно