@@ -1,11 +1,10 @@
 package club.kanban.jirastub;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import net.sf.json.JSONArray;
-import net.sf.json.JSONObject;
-import net.sf.json.JSONSerializer;
-import org.apache.commons.io.IOUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.builder.SpringApplicationBuilder;
@@ -16,15 +15,13 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.awt.*;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Objects;
+import java.util.Map;
 
-//@PropertySource(value = "classpath:config.properties")
 @SpringBootApplication
 @RestController
 public class JiraStubApplication {
@@ -34,90 +31,108 @@ public class JiraStubApplication {
     private final String ERROR_MESSAGE_BOARD = "{\"errorMessages\":[],\"errors\":{\"rapidViewId\":\"The requested board cannot be viewed because it either does not exist or you do not have permission to view it.\"}}";
     private final String FILE_BOARD = "board.json";
     private final String FILE_BOARD_CONFIGURATION = "boardconfig.json";
-    private final String FILE_ISSUE = "issue.json";
     private final String FILE_BOARD_ISSUES = "issueset.json";
     private final static String DEFAULT_MAX_RESULTS = "50";
 
-    @Value("${profile}")
-    private String profile;
-    private JSONObject jsonBoard;
-    private JSONObject jsonBoardConfiguration;
-    private JSONObject jsonIssue;
-    private List<LinkedHashMap> jsonBoardIssues;
+    @Value("${profiles}")
+    private String[] profiles;
+    private final Map<Long, LinkedHashMap> boards = new LinkedHashMap<>();
+    private final Map<Long, LinkedHashMap> boardConfigurations = new LinkedHashMap<>();
+    private final Map<Long, List> boardIssues = new LinkedHashMap<>();
+    private final Logger logger;
+
+    public JiraStubApplication() {
+        logger = LoggerFactory.getLogger("JiraStubApplication");
+    }
 
     public static void main(String[] args) {
-//		SpringApplication.run(JiraStubApplication.class, args);
         ConfigurableApplicationContext ctx = new SpringApplicationBuilder(JiraStubApplication.class).headless(false).run(args);
 
         EventQueue.invokeLater(() -> {
             JiraStubApplication app = ctx.getBean(JiraStubApplication.class);
 
-            try {
-                System.out.print("Loading data files ...");
-                app.jsonBoard = getJSONObjectFromResource(app.profile + "/" + app.FILE_BOARD);
-                app.jsonBoardConfiguration = getJSONObjectFromResource(app.profile + "/" + app.FILE_BOARD_CONFIGURATION);
-                app.jsonIssue = getJSONObjectFromResource(app.profile + "/" + app.FILE_ISSUE);
-                ObjectMapper mapper = new ObjectMapper();
-
-//                File file = new File(app.profile + "/" + app.FILE_BOARD_ISSUES);
-                InputStream inputStream = ClassLoader.getSystemResourceAsStream(app.profile + "/" + app.FILE_BOARD_ISSUES);
-                LinkedHashMap json = mapper.readValue(inputStream.readAllBytes(), new TypeReference<LinkedHashMap>() {});
-                app.jsonBoardIssues = (List<LinkedHashMap>) json.get("issues");
-
-                System.out.printf(" done. %d issues loaded.\n", app.jsonBoardIssues.size());
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+            for (String profile : app.profiles) {
+                app.loadProfile(profile);
             }
-
         });
     }
 
-    public static JSONObject getJSONObjectFromResource(String file) throws IOException {
-        JSONObject jsonObject = null;
+    public void loadProfile(String profile) {
+        try {
+            LinkedHashMap json;
+
+            logger.info("Loading profile '{}' ...", profile);
+
+            json = getJSONObjectFromResource(profile + "/" + FILE_BOARD);
+
+            Long boardId;
+            Object o = json.get("id");
+            if (o instanceof Number)
+                boardId = ((Number) (o)).longValue();
+            else
+                boardId = Long.parseLong((String) o);
+
+            boards.put(boardId, json);
+
+            json = getJSONObjectFromResource(profile + "/" + FILE_BOARD_CONFIGURATION);
+            boardConfigurations.put(boardId, json);
+
+            json = getJSONObjectFromResource(profile + "/" + FILE_BOARD_ISSUES);
+            List issues = (List) json.get("issues");
+            boardIssues.put(boardId, issues);
+
+            logger.info("SUCCESS: {} issues loaded for profile '{}'", issues.size(), profile);
+        } catch (Exception e) {
+            logger.error("ERROR: no issues loaded for profile '{}'", profile);
+        }
+    }
+
+    public static LinkedHashMap getJSONObjectFromResource(String file) throws IOException {
+        ObjectMapper mapper = new ObjectMapper();
         InputStream inputStream = ClassLoader.getSystemResourceAsStream(file);
-        String s = IOUtils.toString(inputStream, "UTF-8");
-        jsonObject = (JSONObject) JSONSerializer.toJSON(s);
-        return jsonObject;
+        return mapper.readValue(inputStream.readAllBytes(), new TypeReference<LinkedHashMap>() {
+        });
     }
 
     @GetMapping(API_PREFIX + "/board/{boardId}")
-    public String getBoard(@PathVariable("boardId") long boardId) {
-        long id = jsonBoard.getLong("id");
-        return boardId == id ? jsonBoard.toString() : ERROR_MESSAGE_BOARD;
+    public String getBoard(@PathVariable("boardId") long boardId) throws JsonProcessingException {
+        LinkedHashMap board = boards.get(boardId);
+        return board != null ? (new ObjectMapper()).writeValueAsString(board) : ERROR_MESSAGE_BOARD;
     }
 
     @GetMapping(API_PREFIX + "/board/{boardId}/configuration")
-    public String getBoardConfiguration(@PathVariable("boardId") int boardId) {
-        long id = jsonBoard.getLong("id");
-        return boardId == id ? jsonBoardConfiguration.toString() : ERROR_MESSAGE_BOARD;
-    }
-
-    @GetMapping(API_PREFIX + "/issue/{issueId}")
-    public String getIssue(@PathVariable("issueId") int issueId) {
-        long id = jsonIssue.getLong("id");
-        return issueId == id ? jsonIssue.toString() : ERROR_MESSAGE_ISSUE;
+    public String getBoardConfiguration(@PathVariable("boardId") long boardId) throws JsonProcessingException {
+        LinkedHashMap boardConfiguration = boardConfigurations.get(boardId);
+        return boardConfiguration != null ? (new ObjectMapper()).writeValueAsString(boardConfiguration) : ERROR_MESSAGE_BOARD;
     }
 
     @GetMapping(API_PREFIX + "/board/{boardId}/issue")
-    public IssuesSet getAllIssues(@PathVariable("boardId") int boardId, @RequestParam(name = "startAt", defaultValue = "0") long startAt, @RequestParam(name = "maxResults", defaultValue = DEFAULT_MAX_RESULTS) long maxResults) {
+    public String getAllIssues(@PathVariable("boardId") long boardId, @RequestParam(name = "startAt", defaultValue = "0") long startAt, @RequestParam(name = "maxResults", defaultValue = DEFAULT_MAX_RESULTS) long maxResults) throws JsonProcessingException {
         long start = startAt >= 0 ? startAt : 0;
         long stop = start + maxResults;
 
         List<LinkedHashMap> subList = null;
 
-        long id = jsonBoard.getLong("id");
-        if (boardId == id) {
+        List<LinkedHashMap> issues = boardIssues.get(boardId);
 
-            if (start < jsonBoardIssues.size() && stop >= 0) {
-                if (stop > jsonBoardIssues.size()) {
-                    stop = jsonBoardIssues.size();
+        if (issues != null) {
+
+            if (start < issues.size() && stop >= 0) {
+                if (stop > issues.size()) {
+                    stop = issues.size();
                 }
-                subList = jsonBoardIssues.subList((int) start, (int) stop);
+                subList = issues.subList((int) start, (int) stop);
             } else
                 subList = new ArrayList<>();
-        } else
-            subList = new ArrayList<>();
-
-        return new IssuesSet(subList, start, maxResults, jsonBoardIssues.size());
+            LinkedHashMap issueSet = new LinkedHashMap() {
+            };
+            issueSet.put("startAt", start);
+            issueSet.put("maxResults", maxResults);
+            issueSet.put("total", issues.size());
+            issueSet.put("issues", subList);
+            return (new ObjectMapper()).writeValueAsString(issueSet);
+        } else {
+            return String.format("The board '%d' not found", boardId);
+        }
     }
 }
